[gd_scene load_steps=2 format=3 uid="uid://vnxyl7phgdxn"]

[ext_resource type="Script" path="res://Nodes/Children/Scripts/ExpressionScene.gd" id="1_k4fc5"]

[node name="ExpressionScene" type="PanelContainer"]
offset_right = 305.0
offset_bottom = 101.0
script = ExtResource("1_k4fc5")

[node name="ExpressionContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ExpressionContainer"]
layout_mode = 2

[node name="ExpressionNameLabel" type="Label" parent="ExpressionContainer/PanelContainer"]
layout_mode = 2
text = "Expression #1"
horizontal_alignment = 1

[node name="ShowButton" type="Button" parent="ExpressionContainer"]
layout_mode = 2
text = "Hide Data"

[node name="dataContainer" type="VBoxContainer" parent="ExpressionContainer"]
layout_mode = 2

[node name="expression" type="HBoxContainer" parent="ExpressionContainer/dataContainer"]
layout_mode = 2

[node name="Space" type="Control" parent="ExpressionContainer/dataContainer/expression"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="expressionLineEdit" type="LineEdit" parent="ExpressionContainer/dataContainer/expression"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "expression"

[node name="Space2" type="Control" parent="ExpressionContainer/dataContainer/expression"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="assignmentVariableIndex" type="HBoxContainer" parent="ExpressionContainer/dataContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ExpressionContainer/dataContainer/assignmentVariableIndex"]
layout_mode = 2
text = "   assignmentVariableIndex"

[node name="Space" type="Control" parent="ExpressionContainer/dataContainer/assignmentVariableIndex"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="assignmentVariableIndexSpinBox" type="SpinBox" parent="ExpressionContainer/dataContainer/assignmentVariableIndex"]
custom_minimum_size = Vector2(85, 0)
layout_direction = 2
layout_mode = 2
min_value = -1.0
max_value = 1000.0
value = -1.0

[node name="assignmentEventIndex" type="HBoxContainer" parent="ExpressionContainer/dataContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ExpressionContainer/dataContainer/assignmentEventIndex"]
layout_mode = 2
text = "   assignmentEventIndex"

[node name="Space" type="Control" parent="ExpressionContainer/dataContainer/assignmentEventIndex"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="assignmentEventIndexSpinBox" type="SpinBox" parent="ExpressionContainer/dataContainer/assignmentEventIndex"]
custom_minimum_size = Vector2(85, 0)
layout_direction = 2
layout_mode = 2
min_value = -1.0
max_value = 1000.0
value = -1.0

[connection signal="pressed" from="ExpressionContainer/ShowButton" to="." method="_on_show_button_pressed"]
[connection signal="text_changed" from="ExpressionContainer/dataContainer/expression/expressionLineEdit" to="." method="_on_expression_line_edit_text_changed"]
[connection signal="value_changed" from="ExpressionContainer/dataContainer/assignmentVariableIndex/assignmentVariableIndexSpinBox" to="." method="_on_assignment_variable_index_spin_box_value_changed"]
[connection signal="value_changed" from="ExpressionContainer/dataContainer/assignmentEventIndex/assignmentEventIndexSpinBox" to="." method="_on_assignment_event_index_spin_box_value_changed"]
